src/test/deca/codegen/valid/created/testOpArith/moduloMultiple.deca
// Description :
//    Test de plusieurs operations modulo
//
// Résultats :
//    0

{
    int x = 25 % 5 % 2; 
    println(x);
}
